# nix-common

./: CONTRIBUTING.md  README.md  flake-module.nix  flake.nix  om.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yaml
examples/simple/: flake.nix  simple.cabal
examples/simple/nix/: haskell-project.nix
examples/simple/src/: Main.hs
nix/: devshell-common.nix  docker.nix  external-services-envs.nix  external-services.nix  ghc928.nix  om.nix  pkgs-latest.nix  pkgs.nix
nix/haskell/: 0001-Add-a-primop-to-get-the-thread-statistics.patch  default-settings.nix  default.nix  devtools.nix  hpc.nix  no-global-cache.nix
nix/haskell/buildAnalysis/: default.nix  endpoints_extract.py  env_extract.py  fdep_merge.py  getConfigKey.py  juspayMetadata.nix  nixv_ui.py  postBuildHook.sh  preBuildHook.sh  server.py
