cabal-version:   3.0
name:            simple
version:         0.1.0.0
license:         MIT
author:          Shivaraj B H
maintainer:      me@shivaraj-bh.in
category:        Other
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
